fix: keep profile image squared on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -438,7 +438,6 @@ a.sticker {
     img {
       width: 160px;
       height: 160px;
-      border-radius: 50%;
     }
   }
 }
@@ -628,7 +627,6 @@ a.sticker {
     margin: 0 auto 24px;
     width: 140px;
     height: 140px;
-    border-radius: 50%;
   }
 }
 
